chore: resolve typos

--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
                    ~ Shaun Yee - Digipay Engineer</p>
                   
                   <blockquote>
-                    <p> Albert is always ready to help with whatever the team needs, even if it means diverging from his already tight schedule.  <br>
-              You know he cares about the team when he’s constantly asking us to sleep even when he doesn’t.  <br>
-                      ~ Joseph Niel Tuazon - Direct Debit Engineer
+                    <p> Albert is always ready to help with whatever the team needs, <br>
+                        even if it means diverging from his already tight schedule.  <br>
+                        He cares about the team when he’s constantly asking us to sleep, <br>
+                        even when he doesn’t sleep enough. <br>
+                        ~ Joseph Niel Tuazon - Direct Debit Engineer
                     </p>
             </blockquote>
             </div>
